src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

body {
  background: url("back_1.jpg") no-repeat black;
  background-size: 100%;
  background-position: top right;
  text-align: center;
  color: white;
}

.foot {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  align-items: center;
  column-gap: 0.5vw;
}

@media (max-width: 1100px) {
  .foot {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media (max-width: 700px) {
  .foot {
    display: grid;
    grid-template-columns: 1fr;
  }
}

.foot p{
  color: aliceblue;
  line-height: 0.5;
}

.foot img{
  width: 100%;
}

h1 {
  font-size: 4vw;
}

.button {
  border: 0;
  border-radius: 5px;
  background: #100f0f;
  color: #ffffff;
  padding: 8px 16px;
  font-size: 2vw;
  cursor: pointer;
  font-weight:bold;
}

.button:hover {
  background: #1d49aa;
}

.button:focus {
  outline: none;
  box-shadow: 0 0 0 4px #cbd6ee;
}

.calc .text{
  border: 0;
  border-radius: 5px;
  background-color: #282c34;
  color: aliceblue;
  padding: 8px 16px;
  font-size: 2vw;
  cursor: pointer;
  font-weight:bold;
}

.calc p{
  font-size: 2vw;
  color: #a0f601;
  font-style: oblique;
}

.prof{
  width: 30%;
  margin: auto;
}

.prof ul {
  padding: 0;
  font-size: 1.5vw;
}

.prof li {
  display: grid;
  grid-template-columns: 6fr 1fr;
  justify-content: space-between;
  align-items: center;
  border-top: solid white 0.15vw;
  padding: 0.5vw;
  list-style-type: none;
  cursor: pointer;
}

span.left {
  text-align: left;
}

span.right {
  text-align: right;
  font-size: 2.5vw;
}

.prof li p {
  color: #4676D7;
  font-size: 1.2vw;
  text-align: left;
}

.prof h2 {
  color: aliceblue;
  font-size: xx-large;
  text-align: center;
}

code {
  text-align: left;
  font-size: 14pt;
}

.login{
  align-content: center;
}

.login .text{
  border: 0;
  border-radius: 5px;
  background-color: #282c34;
  color: aliceblue;
  padding: 8px 16px;
  font-size: 1vw;
  cursor: pointer;
  font-weight:bold;
}

.login .button{
  border: 0;
  border-radius: 5px;
  background: #100f0f;
  color: #ffffff;
  padding: 8px 16px;
  font-size: 1vw;
  cursor: pointer;
  font-weight:bold;
}

.login li{
  padding: 20px;
  list-style-type: none;
}

.button:hover {
  background: #1d49aa;
}

.button:focus {
  outline: none;
  box-shadow: 0 0 0 4px #cbd6ee;
}

